--- a/src/components/CurrentForecast/styles.module.scss
+++ b/src/components/CurrentForecast/styles.module.scss
@@ -1,7 +1,7 @@
 .container {
-  width: 710px;
+  width: 100%;
+  max-width: 710px;
   height: 215px;
-
 
   header {
     font-size: 4.3rem;
@@ -10,27 +10,28 @@
     color: #ffffff;
     text-align: center;
 
-  }
-  p {
-    font-size: 20px;
-    color: #ffffff;
-    text-align: center;
+    p {
+      font-size: 20px;
+      font-weight: 400;
+      color: #ffffff;
+      text-align: center;
+
+    }
   }
 
   main {
 
     .currentTemp {
-
       display: flex;
       align-items: center;
       justify-content: center;
       gap: 30px;
-      margin-top: 10px;
+      margin-top: 15px;
       color: #ffffff;
       span {
         font-size: 64px;
-
       }
+
       svg {
         font-size: 70px;
       }
@@ -45,6 +46,12 @@
 
       p {
         font-weight: 700;
+        color: #ffffff;
+        font-size: 20px;
+      }
+      
+      span {
+        font-weight: 400;
       }
     }
   }
