--- a/src/components/Search/styles.module.scss
+++ b/src/components/Search/styles.module.scss
@@ -1,24 +1,26 @@
 .container {
+  width: 80%;
+  max-width: 710px;
   position: relative;
   display: flex;
   align-items: center;
   flex-direction: column;
   height: 122px;
+  // background-color: red;
 
   p {
     font-size: 4.3rem;
     font-weight: 700;
     top: 0;
-    height: 52px;
-    line-height: 5.2rem;
     letter-spacing: 0.59rem;
     color: #ffffff;
   }
 
   input {
+    width: 100%;
     position: absolute;
     bottom: 0;
-    width: 710px;
+    max-width: 710px;
     height: 50px;
     font-size: 2rem;
     font-weight: 400;
@@ -48,24 +50,66 @@
   border-radius: 0 0 10px 10px;
   box-shadow: 0px, 4px rgba(106, 162, 209, 0.8);
   overflow-x: hidden;
-  
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .resultsItem {
   font-size: 2rem;
-  color: #6AA2D1;
+  color: #6aa2d1;
   margin-left: 15px;
   margin-top: 15px;
-  
+
   ul {
     list-style: none;
-    
+
     li {
       cursor: pointer;
       &:hover {
-        color: #D2B3C1;
+        color: #d2b3c1;
       }
     }
+  }
+}
 
+@media (max-width: 888px) {
+  .container {
+
+    p {
+      text-align: center;
+      font-size: 3rem;
+    }
+  }
+}
+@media (max-width: 672px) {
+
+  .container {
+
+    p {
+      font-size: 2.7rem;
+    }
+  }
+}
+@media (max-width: 470px) {
+
+  .container {
+
+    p {
+      font-size: 2.8rem;
+      letter-spacing: 0;
+    }
+  }
+}
+@media (max-width: 375px) {
+
+  .container {
+
+    p {
+      font-size: 2.5rem;
+      letter-spacing: 0;
+      text-align: center;
+    }
   }
 }
