--- a/styles/global.scss
+++ b/styles/global.scss
@@ -15,11 +15,11 @@ html {
 }
 
 .container {
-  position: relative;
+  // position: relative;
   background: url("/images/sky.png") no-repeat;
   background-size: cover;
   background-position: 100% 100%;
   width: 100vw;
   height: 100vh;
-
 }
+
