--- a/src/components/Loader/styles.module.scss
+++ b/src/components/Loader/styles.module.scss
@@ -1,7 +1,7 @@
-.container {
+.loaderContainer {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
 }
