--- a/src/components/ArrowBack/styles.module.scss
+++ b/src/components/ArrowBack/styles.module.scss
@@ -4,16 +4,14 @@
   left: 50px;
 
   svg {
-    color: #FFFFFF;
+    color: #ffffff;
     font-size: 50px;
     cursor: pointer;
     transform: scale(0.8);
-    transition: all .2s;
+    transition: all 0.2s;
 
     &:hover {
-      transform: scale(1)
+      transform: scale(1);
     }
   }
-
-
 }
